<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:src="@drawable/logofic" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_registro"
        android:layout_margin="15dp"
        android:textSize="20sp"
        style="@style/TextAppearance.AppCompat.Title"


        />

    <EditText
        android:id="@+id/etNombreAlumno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:drawableStart="@drawable/persona"
        android:drawableLeft="@drawable/persona"
        android:drawablePadding="12dp"
        android:hint="@string/hint_Alumno"
        android:inputType="text"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/etApellidoPa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:drawableStart="@drawable/persona"
        android:drawableLeft="@drawable/persona"
        android:drawablePadding="12dp"
        android:hint="@string/hint_AP"
        android:inputType="text"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etApellidoMa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:drawableStart="@drawable/persona"
        android:drawableLeft="@drawable/persona"
        android:drawablePadding="12dp"
        android:hint="@string/hint_AM"
        android:inputType="text"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:drawableStart="@drawable/vector_email"
        android:drawableLeft="@drawable/vector_email"
        android:drawablePadding="12dp"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email"
        android:textStyle="bold"

        />
    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:drawableStart="@drawable/vector_phone"
        android:drawableLeft="@drawable/vector_phone"
        android:drawablePadding="12dp"
        android:inputType="phone"
        android:hint="@string/hint_phone"
        android:textStyle="bold"

        />



    <Button
        android:id="@+id/btnAltaUsuarios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_enviar"
        android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
        />

    <Button
        android:id="@+id/btnCancelarNuevoAlumno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancelar"
        android:layout_margin="@dimen/margin"
        />


</LinearLayout>